--- a/template/Login.html
+++ b/template/Login.html
@@ -83,7 +83,7 @@
 
                                 <div class="form-group">
                                     <div>
-                                        <input name="Dnis" type="number" id="dni" class="form-control" placeholder="Dni" ng-model="registro.dni" min="9999999" max="99999999" required>
+                                        <input name="Dnis" type="number" id="dni" class="form-control" placeholder="Dni" ng-model="registro.dni" max="99999999" required>
                                         <span style = "color:red" ng-show = "FRegistro.Dnis.$dirty && FRegistro.Dnis.$invalid">
                                         <span ng-show = "FRegistro.Dnis.$error.required">Dni is required.</span></span>
                                     </div>
@@ -99,7 +99,7 @@
 
                                 <div class="form-group">
                                     <div>
-                                       <input  name="Teles" type="number" id="telefono" class="form-control" placeholder="Telefono min 9 digitos max 15" ng-model="registro.telefono" min="999999" max ="999999999999999" required> 
+                                       <input  name="Teles" type="number" id="telefono" class="form-control" placeholder="Telefono min 9 digitos max 15" ng-model="registro.telefono"  max ="999999999999999" required> 
                                        <span style = "color:red" ng-show = "FRegistro.Teles.$dirty && FRegistro.Teles.$invalid">
                                         <span ng-show = "FRegistro.Teles.$error.required">Telefono is required.</span></span>
 
@@ -116,12 +116,12 @@
 
                 <div class="col-md-4" ng-hide="flag">    
                     <div class="row">   
-                        <div class="col-md-12" id="login">
+                        <div class="col-md-12" >
                             <div id="tit">falta poco para terminar</div>
                             <p><h1>Crear Usuario </h1></p>
                             <form method="get" class="form-horizontal" role="form" name="Fregistrar">
-                                <input name="Usuario" type="text" id="usuario" class="form-control " placeholder="Usuario" ng-model="registrar.user" maxlength ="10" ><br>
-                                <input name="Password" type="password" id="password" class="form-control" placeholder="Password" ng-model="registrar.pass" maxlength ="10" ><br>
+                                <input name="Usuario" type="text" id="usuario" class="form-control " placeholder="Usuario" ng-model="registro.user" maxlength ="10" ><br>
+                                <input name="Password" type="password" id="password" class="form-control" placeholder="Password" ng-model="registro.pass" maxlength ="10" ><br>
                                 <button  class="btn btn-lg btn-primary " ng-click="btnregistrar()">Registrar</button>
                             </form>
                             
